--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
       </nav>
       <video autoplay muted loop id="bgvid">
-        <src="/img/vhero.mp4" type="video/mp4">
+        <source src="/img/vhero.mp4" type="video/mp4">
       </video>
       <div class="content">
         <h2>Hello, It's Me Atharva</h2>
